# coordinated-evacuation-ros2

./: .clang-format  .clang-tidy  .gitignore  README.md  devtool.sh  script.sh
demos/demo1/: conf  map.sdf
demos/demo2/: conf  map.sdf
demos/demo3/: conf  map.sdf
src/get_positions/: CMakeLists.txt  package.xml
src/get_positions/src/: get_positions.cpp
src/rpl/: CMakeLists.txt  package.xml
src/rpl/include/rpl/: Timer.hpp  common.hpp  types.hpp
src/rpl/include/rpl/internal/: geometry.hpp  parallel.hpp  point.hpp  rplintrin.hpp  utils.hpp
src/rpl/include/rpl/io/: Minkowski.hpp  WorldDescriptor.hpp
src/rpl/include/rpl/map/: AVLTree.hpp  Graph.hpp  RoadMap.hpp  Table.hpp
src/rpl/include/rpl/planning/: CollisionDetection.hpp  Dubins.hpp
src/rpl/src/clipper/: clipper.cpp
src/rpl/src/io/: Minkowski.cpp  WorldDescriptor.cpp
src/rpl/src/map/: AVLTree.cpp  Graph.cpp  RoadMap.cpp  Table.cpp
src/rpl/src/planning/: CollisionDetection.cpp  Dubins.cpp
src/rpl_msgs/: CMakeLists.txt  package.xml
src/rpl_msgs/msg/: Graph.msg  Path.msg  Paths.msg  Polygon.msg  Poses.msg  RoadMap.msg  Table.msg  WorldDescriptor.msg
src/rpl_node/: CMakeLists.txt  package.xml
src/rpl_node/launch/: plan_path.launch.py
src/rpl_node/src/: rpl_node.cpp
src/rpl_ros2/: CMakeLists.txt  package.xml
src/rpl_ros2/cmake/: register_executable.cmake
src/rpl_ros2/include/rpl_ros2/: roadmap_publisher.hpp  shelfino_delay.hpp  shelfino_path_executor.hpp  shelfino_planner.hpp  world_descriptor.hpp
src/rpl_ros2/include/rpl_ros2/adapters/: GraphAdapter.hpp  PathAdapter.hpp  PathsAdapter.hpp  PointAdapter.hpp  PolygonAdapter.hpp  PoseAdapter.hpp  PosesAdapter.hpp  RoadMapAdapter.hpp  TableAdapter.hpp  WorldDescriptorAdapter.hpp
src/rpl_ros2/launch/: rpl_ros2.launch.py
src/rpl_ros2/src/: roadmap_publisher.cpp  shelfino_delay.cpp  shelfino_path_executor.cpp  shelfino_planner.cpp  world_descriptor.cpp
src/send_borders/: CMakeLists.txt  package.xml
src/send_borders/src/: send_borders.cpp
src/send_gates/: CMakeLists.txt  package.xml
src/send_gates/src/: send_gates.cpp
src/send_obstacles/: CMakeLists.txt  package.xml
src/send_obstacles/src/: send_obstacles.cpp
src/shelfino_description/: CMakeLists.txt  package.xml
src/shelfino_description/launch/: robot_state_publisher.launch.py
src/shelfino_description/models/shelfino/: model.sdf  model.urdf
src/shelfino_gazebo/: CMakeLists.txt  package.xml
src/shelfino_gazebo/launch/: multi_shelfino.launch.py  shelfino_empty.launch.py  shelfino_hexagon.launch.py  shelfino_povo.launch.py
src/shelfino_navigation/: package.xml
src/shelfino_navigation/config/: ca.yaml  gazebo.lua  shelfino1.yaml  shelfino2.yaml  shelfino3.yaml  shelfinoG.yaml
src/shelfino_navigation/launch/: multi_shelfino_nav.launch.py  shelfino1_nav.launch.py  shelfino2_nav.launch.py  shelfino3_nav.launch.py  shelfinoG_nav.launch.py
src/shelfino_navigation/map/: turtle.yaml
src/shelfino_navigation/rviz/: shelfino1_nav.rviz  shelfino2_nav.rviz  shelfino3_nav.rviz  shelfinoG_nav.rviz  shelfino_gazebo_nav.rviz  shelfino_gazebo_slam.rviz
src/shelfino_node/: CMakeLists.txt
src/shelfino_node/include/: hardwareglobalinterface.h  hardwareparameters.h
src/shelfino_node/launch/: bringup.launch.py  bringup_nav.launch.py  shelfino1_rviz.launch.py  shelfino2_rviz.launch.py  shelfino3_rviz.launch.py
src/shelfino_node/rviz/: shelfino1.rviz  shelfino2.rviz  shelfino3.rviz
src/shelfino_node/src/: hardwareglobalinterface.cpp  shelfino_hw_publisher.cpp
src/simulator/: CMakeLists.txt  package.xml
src/simulator/include/simulator/: get_positions.hpp  send_borders.hpp  send_gates.hpp  send_obstacles.hpp
src/simulator/launch/: init_shelfino.launch.py  init_world.launch.py  rvizlaunch.launch.py  sim.launch.py
src/simulator/models/arena_ground/: model.sdf
src/simulator/models/gate/: model.sdf
src/simulator/models/hexagon_142/: model.sdf
src/simulator/models/hexagon_189/: model.sdf
src/simulator/models/hexagon_95/: model.sdf
src/simulator/models/long_black_stripe/: model.sdf
src/simulator/models/mindstorm_map/: map.sdf  old.map.sdf
src/simulator/models/pentagon_142/: model.sdf
src/simulator/models/pentagon_189/: model.sdf
src/simulator/models/pentagon_95/: model.sdf
src/simulator/models/rectangle_142/: model.sdf
src/simulator/models/rectangle_189/: model.sdf
src/simulator/models/rectangle_95/: model.sdf
src/simulator/models/short_black_stripe/: model.sdf
src/simulator/models/short_red_stripe/: model.sdf
src/simulator/models/triangle_142/: model.sdf
src/simulator/models/triangle_189/: model.sdf
src/simulator/models/triangle_95/: model.sdf
src/simulator/rviz/: shelfino1.rviz  shelfino2.rviz  shelfinoG.rviz
src/simulator/src/: get_positions.cpp  send_borders.cpp  send_gates.cpp  send_obstacles.cpp  utils.hpp
src/simulator/worlds/: mindstorm_arena.world
utils/: conf  map.sdf
